--- a/jobs/test-copy/Jenkinsfile
+++ b/jobs/test-copy/Jenkinsfile
@@ -1,8 +1,9 @@
 
-sh "pwd"
-sh "ls"
-sh "cp /var/lib/jenkins/,ssh/mlamouri.keytab ."
-
+stage("run on master") {
+    sh "pwd"
+    sh "ls"
+    sh "cp /var/lib/jenkins/,ssh/mlamouri.keytab ."
+}
 
 node('container') {
     stage("Copy A File") {
